syntax = "proto3";

// Specify the Go package for generated code
option go_package = "github.com/tdevsin/internal/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

enum Status {
    HEALTHY = 0;
    SUSPECTED_FAILED = 1;
    FAILED = 2;
}

message Health {
    Status status = 1;
    google.protobuf.Timestamp last_updated = 2;
}

message Node {
    string id = 1;
    string address = 2;
    Health health = 3;
}

message ClusterState {
    repeated Node nodes = 1;
    int64 version = 2;
    google.protobuf.Timestamp last_updated = 3;
}

service ClusterService {
    rpc GetClusterState (google.protobuf.Empty) returns (ClusterState);
    rpc SetClusterState (ClusterState) returns (google.protobuf.Empty);
}